Fix footer, cards, gap, margin

--- a/css/styles.css
+++ b/css/styles.css
@@ -386,7 +386,7 @@ body {
   font-weight: 700;
 }
 
-.center {
+.center-btn {
   text-align: center;
 }
 
@@ -539,7 +539,7 @@ body {
     width: auto;
     padding: 6px 24px;
     font-size: 16px;
-    border-radius: 8px;
+    border-radius: 12px;
   }
 
   .curriculum h2 {
@@ -551,6 +551,7 @@ body {
 
   .cards-container {
     padding-bottom: 40px;
+    margin-bottom: 0;
   }
 
   .btn-container {
@@ -566,7 +567,7 @@ body {
     justify-content: flex-start;
   }
 
-  .center {
+  .center-btn {
     text-align: center;
     padding-bottom: 40px;
   }
@@ -574,7 +575,6 @@ body {
   .date,
   .btn-2 {
     font-size: 9px;
-    width: 109px;
     padding: 6px 12px;
     position: static;
     /* top: -16px; */
@@ -583,14 +583,14 @@ body {
   }
 
   .card-text {
-    padding: 0 22px 22px 22px;
+    padding: 0 22px 0 22px;
     position: relative;
     top: -20px;
   }
 
   .story-cards-container {
-   padding-left: 1rem;
-   padding-right: 1rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .simillar-text {
@@ -610,6 +610,7 @@ body {
 
   .kids-education p {
     margin-bottom: 2rem;
+    font-size: 1rem;
   }
 
   .about-school {
@@ -638,15 +639,19 @@ body {
   }
 
   /* our stories section */
+  .our-stories h2 {
+    margin-bottom: 20px;
+    margin-top: 0;
+    font-size: 26px;
+  }
   .story-cards-container {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     gap: 11px;
+    margin-bottom: 20px;
+  }
+
+  .footer-logo h2 {
+    font-size: 35px;
   }
 }
-
-/* @media (min-width: 577px) and (max-width: 1024px) {
-  .container {
-    grid-template-columns: repeat(2, 1fr);
-  }
-} */
